fix reference links breaking scrolling on safari

--- a/css/modules/_defaults.scss
+++ b/css/modules/_defaults.scss
@@ -58,3 +58,7 @@ main {
 hr {
   margin: 0;
 }
+
+.reference {
+  word-wrap: break-word;
+}
