--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,10 @@ hr {
   margin: 0;
 }
 
+.reference {
+  word-wrap: break-word;
+}
+
 /* Animations */
 @-webkit-keyframes spin {
   from {
